# Aivora

./: .gitignore  REVIEW.md  makefile  manage.py  pyproject.toml
aivora/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
core/: email_backend.py  serializers.py  services.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_rename_experiense_user_experience_and_more.py  0003_alter_user_created_at_alter_user_updated_at.py
core/models/: abs.py  choice.py  user.py
core/tests/: conftest.py
core/tests/test_user/: test_authentification.py
